--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "module-discovery",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "requires node module recursively from a root directory a execute callback",
-  "keywords": ["module", "discovery"],
+  "keywords": ["module", "discovery", "package"],
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
